--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,6 +5,12 @@
       <p class="mt-2 text-sm text-gray-600 dark:text-gray-400">Enter your email address and we'll send you instructions to reset your password.</p>
     </div>
 
+    <div class="bg-blue-50 dark:bg-blue-900/20 p-4 rounded-xl mb-6">
+      <p class="text-sm text-blue-700 dark:text-blue-300">
+        <strong>How it works:</strong> We'll send a secure link to your email. Click that link to set a new password.
+      </p>
+    </div>
+
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
