--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="font-poppins antialiased bg-white dark:bg-gray-950 text-gray-900 dark:text-white min-h-screen flex flex-col <%= controller_name %>-<%= action_name %>" data-controller="debug">
+  <body class="font-poppins antialiased bg-white dark:bg-gray-950 text-gray-900 dark:text-white min-h-screen flex flex-col <%= controller_name %>-<%= action_name %>" data-controller="debug icon">
 
     <%= render 'shared/header' %>
     <%= render 'shared/toast_template' %>
